Fix layout issues in 'about-us' and 'our-menu' pages

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@
 }
 
 #content {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -67,7 +68,8 @@ footer {
   display: grid;
   grid-template-columns: repeat(auto-fill, 25rem);
   grid-auto-rows: auto;
-  min-width: 80%;
+  justify-content: center;
+  width: 100%;
   gap: 1rem;
 }
 
@@ -106,12 +108,21 @@ footer {
 /* About us page layout */
 
 #about-us-section {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 7rem;
-  justify-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   padding: 1rem;
+  gap: 1rem;
+  flex: 1;
+}
+
+#about-us-main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  gap: 7rem;
+  align-items: center;
 }
 
 /* Menu page layout */
@@ -120,7 +131,9 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 2rem;
   gap: 1rem;
   width: 100%;
+  flex: 1;
 }
